--- a/index_list.html
+++ b/index_list.html
@@ -207,7 +207,7 @@
                             <p>測試更新TinyMCE版本：<a href="https://www.tiny.cloud/docs-4x/quick-start/"></a></p>
                             <ul>
                                 <li>Html editor測試(1) <a href="data_new_htmleditor.htm" target="_blank"></a></li>
-                                <li>Html editor測試(2) <a href="data_new_htmleditorv4.htm" target="_blank"></a></li>
+                                <li><font style="color:red;">(添加範例效果)</font>Html editor測試(2) <a href="data_new_htmleditorv4.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
