--- a/schedulerentEdit.htm
+++ b/schedulerentEdit.htm
@@ -327,7 +327,7 @@
                                         </div>
                                         <hr style="height:1px;width:100%;">
 
-                                        <h4>固定週期：展覽(關聯萬年曆與展覽期間設定)
+                                        <h4>固定週期：展覽
                                             <div class="additional" style="display:inline-block;margin-left:20px;">
                                                 <div class="checkSwitch">
                                                     <label>
